// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TanzuCommandStep tests InputSet view renders errors 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="fieldAndOptions formGroup md"
    >
      <div
        class="bp3-form-group bp3-intent-danger"
      >
        <label
          class="bp3-label"
          for="timeout"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="stepTestUtilForm_timeout"
          >
            pipelineSteps.timeoutLabel
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="container"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="flex-grow: 1;"
            >
              <div
                class="bp3-input-group bp3-fill"
              >
                <input
                  class="bp3-input"
                  name="timeout"
                  placeholder="Enter w/d/h/m/s/ms"
                  type="text"
                  value=""
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    data-testid="multi-type-button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
          <div
            class="bp3-form-helper-text"
          >
            <div
              class="FormError--errorDiv"
              data-name="timeout"
            >
              <span
                class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                data-icon="circle-cross"
              >
                <svg
                  height="12"
                  viewBox="0 0 13 13"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="FormError--error"
              >
                validation.timeout10SecMinimum
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup alignStart md"
    >
      <div
        class="bp3-form-group"
        style="flex-grow: 1; margin-bottom: 0px;"
      >
        <label
          class="bp3-label"
          for="spec.script.store.spec.files"
        >
          <div
            class="formLabel"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="stepTestUtilForm_spec.script.store.spec.files"
            >
              common.script
            </span>
            <div
              class="bp3-popover-wrapper typeSelectorWrapper"
            >
              <div
                class="bp3-popover-target typeSelector"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    <span
                      class="bp3-icon StyledProps--main icon fixed"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div>
            <div
              class="label listLabel"
            />
            <div
              class="group"
            >
              <div
                class="selectFieldWrapper"
                style="flex-grow: 1;"
              >
                <div
                  class="bp3-form-group"
                  style="flex-grow: 1; margin-bottom: 0px; margin-top: 0px;"
                >
                  <label
                    class="bp3-label"
                    for="spec.script.store.spec.files[0]"
                  >
                    <div
                      class="StyledProps--font StyledProps--main StyledProps--flex"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="stepTestUtilForm_spec.script.store.spec.files[0]"
                      >
                        
                      </span>
                    </div>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline"
                    >
                      <div
                        class="selectFieldWrapper"
                      >
                        <div
                          class="bp3-form-group bp3-intent-danger"
                          style="width: 100%;"
                        >
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="Layout--vertical StyledProps--main"
                              data-testid="file-store-select"
                            >
                              <div
                                class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                                data-testid="container-fs"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-left-xsmall"
                                >
                                  - 
                                  select
                                   -
                                </p>
                                <div
                                  class="StyledProps--font StyledProps--main StyledProps--padding-right-medium"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--color StyledProps--color-grey300 StyledProps--margin-left-small"
                                    icon="chevron-down"
                                  >
                                    <svg
                                      data-icon="chevron-down"
                                      height="15"
                                      viewBox="0 0 16 16"
                                      width="15"
                                    >
                                      <desc>
                                        chevron-down
                                      </desc>
                                      <path
                                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </div>
                            </div>
                            <div
                              class="bp3-form-helper-text"
                            >
                              <div
                                class="FormError--errorDiv"
                                data-name="spec.script.store.spec.files[0]"
                              >
                                <span
                                  class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                                  data-icon="circle-cross"
                                >
                                  <svg
                                    height="12"
                                    viewBox="0 0 13 13"
                                    width="12"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      clip-rule="evenodd"
                                      d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                                <span
                                  class="FormError--error"
                                >
                                  f
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="bp3-popover-wrapper typeSelectorWrapper"
                      >
                        <div
                          class="bp3-popover-target typeSelector"
                        >
                          <button
                            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <span
                                class="bp3-icon StyledProps--main icon fixed"
                                data-icon="fixed-input"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--intent-danger StyledProps--margin-top-xsmall"
            >
              fieldRequired
            </p>
          </div>
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {
  "spec": {
    "script": {
      "store": {
        "spec": {
          "files": "fieldRequired"
        }
      }
    }
  },
  "timeout": "validation.timeout10SecMinimum"
}
    </pre>
    <button
      aria-label="Submit"
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`TanzuCommandStep tests Variables view renders fine 1`] = `
<div>
  <div
    class="variablesListTable variablePaddingL3"
  />
</div>
`;

exports[`TanzuCommandStep tests should render edit view as edit step with all runtime inputs 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
    >
      <div
        class="formGroup lg"
      >
        <div
          class="InputWithIdentifier--txtNameContainer TextInput--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="universalInputNameWithId"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                Id
              </p>
            </div>
            <p
              class="StyledProps--font StyledProps--main"
            >
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text InputWithIdentifier--idValue"
                  tabindex="0"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  >
                    Tanzu_Command_Step_Default
                  </span>
                </div>
              </span>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="Edit"
              style="vertical-align: middle; cursor: pointer;"
            >
              <svg
                height="12"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  opacity="0.3"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group bp3-disabled"
          >
            <label
              class="bp3-label"
              for="name"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="TanzuCommandStep_name"
              >
                name
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group bp3-disabled"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  disabled=""
                  name="name"
                  placeholder="pipeline.stepNamePlaceholder"
                  type="text"
                  value="Tanzu Command Step Default"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup sm"
      >
        <div
          class="bp3-form-group bp3-disabled"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="TanzuCommandStep_timeout"
            >
              pipelineSteps.timeoutLabel
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="container"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                style="flex-grow: 1;"
              >
                <div
                  class="TextInput--main MultiTypeInput--input"
                >
                  <div
                    class="bp3-input-group bp3-disabled"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="timeout"
                      placeholder="<+input>"
                      type="text"
                      value="<+input>"
                    />
                  </div>
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                  data-testid="multi-type-button"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="runtime-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 10 7.97"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                        fill="current-color"
                      />
                    </svg>
                  </span>
                </button>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                    id="configureOptions_timeout"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-cog StyledProps--main"
                      icon="cog"
                    >
                      <svg
                        data-icon="cog"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          cog
                        </desc>
                        <path
                          d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
      >
        <div
          class="StyledProps--font StyledProps--main typeSelect"
        >
          <select
            class="selectDropdown"
            data-testid="templateOptions"
            disabled=""
            name="spec.script.store.type"
          >
            <option
              value="Harness"
            >
              resourcePage.fileStore
            </option>
            <option
              value="Inline"
            >
              inline
            </option>
          </select>
        </div>
      </div>
      <div
        class="formGroup md bottomWidth"
      >
        <div
          class="group"
          data-rbd-droppable-context-id="3"
          data-rbd-droppable-id="droppableSelect"
        >
          <div
            class="bp3-form-group bp3-disabled"
            style="flex-grow: 1; margin-bottom: 0px;"
          >
            <label
              class="bp3-label"
              for="spec.script.store.spec.files"
            >
              <div
                class="formLabel"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="TanzuCommandStep_spec.script.store.spec.files"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="Label--main"
                    >
                      common.script
                    </label>
                  </div>
                </span>
                <div
                  class="bp3-popover-wrapper typeSelectorWrapper"
                >
                  <div
                    class="bp3-popover-target typeSelector"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="bp3-icon StyledProps--main icon runtime"
                          data-icon="runtime-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 10 7.97"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                              fill="current-color"
                            />
                          </svg>
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-form-group bp3-disabled runtimeDisabled"
              >
                
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group bp3-disabled"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      disabled=""
                      name="spec.script.store.spec.files"
                      type="text"
                      value="<+input>"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <span
            class="bp3-popover-wrapper bp3-dark"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                id="configureOptions_spec.script.store.spec.files"
                style="margin-top: 11px;"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-cog StyledProps--main"
                  icon="cog"
                >
                  <svg
                    data-icon="cog"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      cog
                    </desc>
                    <path
                      d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
      <div
        class="Accordion--accordion accordion"
      >
        <div
          class="Accordion--panel"
          data-open="false"
          data-testid="optional-config-panel"
        >
          <div
            class="Accordion--summary"
            data-testid="optional-config-summary"
          >
            <div
              class="Accordion--label"
            >
              common.optionalConfig
            </div>
            <div
              class="Accordion--chevron"
            />
          </div>
          <div
            class="bp3-collapse Accordion--collapse"
          >
            <div
              aria-hidden="false"
              class="bp3-collapse-body"
              style="transform: translateY(-undefinedpx);"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TanzuCommandStep tests should render edit view as edit step with all runtime inputs 2`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
    >
      <div
        class="formGroup lg"
      >
        <div
          class="InputWithIdentifier--txtNameContainer TextInput--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="universalInputNameWithId"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                Id
              </p>
            </div>
            <p
              class="StyledProps--font StyledProps--main"
            >
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text InputWithIdentifier--idValue"
                  tabindex="0"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  >
                    Tanzu_Command_Step_Default
                  </span>
                </div>
              </span>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="Edit"
              style="vertical-align: middle; cursor: pointer;"
            >
              <svg
                height="12"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  opacity="0.3"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group bp3-disabled"
          >
            <label
              class="bp3-label"
              for="name"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="TanzuCommandStep_name"
              >
                name
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group bp3-disabled"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  disabled=""
                  name="name"
                  placeholder="pipeline.stepNamePlaceholder"
                  type="text"
                  value="Tanzu Command Step Default"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup sm"
      >
        <div
          class="bp3-form-group bp3-disabled"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="TanzuCommandStep_timeout"
            >
              pipelineSteps.timeoutLabel
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="container"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                style="flex-grow: 1;"
              >
                <div
                  class="TextInput--main MultiTypeInput--input"
                >
                  <div
                    class="bp3-input-group bp3-disabled"
                  >
                    <input
                      class="bp3-input"
                      disabled=""
                      name="timeout"
                      placeholder="<+input>"
                      type="text"
                      value="<+input>"
                    />
                  </div>
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                  data-testid="multi-type-button"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="runtime-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 10 7.97"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                        fill="current-color"
                      />
                    </svg>
                  </span>
                </button>
              </div>
              <span
                class="bp3-popover-wrapper bp3-dark"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                    id="configureOptions_timeout"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-cog StyledProps--main"
                      icon="cog"
                    >
                      <svg
                        data-icon="cog"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          cog
                        </desc>
                        <path
                          d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
      >
        <div
          class="StyledProps--font StyledProps--main typeSelect"
        >
          <select
            class="selectDropdown"
            data-testid="templateOptions"
            disabled=""
            name="spec.script.store.type"
          >
            <option
              value="Harness"
            >
              resourcePage.fileStore
            </option>
            <option
              value="Inline"
            >
              inline
            </option>
          </select>
        </div>
      </div>
      <div>
        <div
          class="bp3-form-group bp3-disabled"
        >
          <label
            class="bp3-label"
            for="spec.script.store.spec.content"
          >
            <div
              class="formLabel"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="TanzuCommandStep_spec.script.store.spec.content"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <label
                    class="Label--main"
                  >
                    common.script
                  </label>
                </div>
              </span>
            </div>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="monacoWrapper"
            >
              <textarea
                name="spec.script.store.spec.content"
              >
                &lt;+input&gt;
              </textarea>
              <button
                class="bp3-button bp3-small Button--button StyledProps--font StyledProps--main expandBtn Button--with-current-color Button--iconOnly Button--withLeftIcon"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-fullscreen StyledProps--main"
                  icon="fullscreen"
                >
                  <svg
                    data-icon="fullscreen"
                    height="10"
                    viewBox="0 0 16 16"
                    width="10"
                  >
                    <desc>
                      fullscreen
                    </desc>
                    <path
                      d="M3.41 2H5c.55 0 1-.45 1-1s-.45-1-1-1H1C.45 0 0 .45 0 1v4c0 .55.45 1 1 1s1-.45 1-1V3.41L5.29 6.7c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L3.41 2zM6 9c-.28 0-.53.11-.71.29L2 12.59V11c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .55.45 1 1 1h4c.55 0 1-.45 1-1s-.45-1-1-1H3.41l3.29-3.29c.19-.18.3-.43.3-.71 0-.55-.45-1-1-1zm9 1c-.55 0-1 .45-1 1v1.59L10.71 9.3A.965.965 0 0010 9a1.003 1.003 0 00-.71 1.71l3.3 3.29H11c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1zm0-10h-4c-.55 0-1 .45-1 1s.45 1 1 1h1.59l-3.3 3.29a1.003 1.003 0 001.42 1.42L14 3.41V5c0 .55.45 1 1 1s1-.45 1-1V1c0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Accordion--accordion accordion"
      >
        <div
          class="Accordion--panel"
          data-open="false"
          data-testid="optional-config-panel"
        >
          <div
            class="Accordion--summary"
            data-testid="optional-config-summary"
          >
            <div
              class="Accordion--label"
            >
              common.optionalConfig
            </div>
            <div
              class="Accordion--chevron"
            />
          </div>
          <div
            class="bp3-collapse Accordion--collapse"
          >
            <div
              aria-hidden="false"
              class="bp3-collapse-body"
              style="transform: translateY(-undefinedpx);"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TanzuCommandStep tests should show error on submit with invalid data with fileStorea 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
    >
      <div
        class="formGroup lg"
      >
        <div
          class="InputWithIdentifier--txtNameContainer TextInput--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="universalInputNameWithId"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                Id
              </p>
            </div>
            <p
              class="StyledProps--font StyledProps--main"
            >
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                  tabindex="0"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  />
                </div>
              </span>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="Edit"
              style="vertical-align: middle; cursor: pointer;"
            >
              <svg
                height="12"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  opacity="0.3"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group bp3-intent-danger"
          >
            <label
              class="bp3-label"
              for="name"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="TanzuCommandStep_name"
              >
                name
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group bp3-intent-danger"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  placeholder="pipeline.stepNamePlaceholder"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="bp3-form-helper-text"
              >
                <div
                  class="FormError--errorDiv"
                  data-name="name"
                >
                  <span
                    class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                    data-icon="circle-cross"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 13 13"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="FormError--error"
                  >
                    pipelineSteps.stepNameRequired
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup sm"
      >
        <div
          class="bp3-form-group bp3-intent-danger"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="TanzuCommandStep_timeout"
            >
              pipelineSteps.timeoutLabel
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="container"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="flex-grow: 1;"
              >
                <div
                  class="bp3-input-group bp3-fill"
                >
                  <input
                    class="bp3-input"
                    name="timeout"
                    placeholder="Enter w/d/h/m/s/ms"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      data-testid="multi-type-button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="bp3-form-helper-text"
            >
              <div
                class="FormError--errorDiv"
                data-name="timeout"
              >
                <span
                  class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                  data-icon="circle-cross"
                >
                  <svg
                    height="12"
                    viewBox="0 0 13 13"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="FormError--error"
                >
                  validation.timeout10SecMinimum
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
      >
        <div
          class="StyledProps--font StyledProps--main typeSelect"
        >
          <select
            class="selectDropdown"
            data-testid="templateOptions"
            name="spec.script.store.type"
          >
            <option
              value="Harness"
            >
              resourcePage.fileStore
            </option>
            <option
              value="Inline"
            >
              inline
            </option>
          </select>
        </div>
      </div>
      <div
        class="formGroup md bottomWidth"
      >
        <div
          class="group"
          data-rbd-droppable-context-id="1"
          data-rbd-droppable-id="droppableSelect"
        >
          <div
            class="bp3-form-group"
            style="flex-grow: 1; margin-bottom: 0px;"
          >
            <label
              class="bp3-label"
              for="spec.script.store.spec.files"
            >
              <div
                class="formLabel"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="TanzuCommandStep_spec.script.store.spec.files"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="Label--main"
                    >
                      common.script
                    </label>
                  </div>
                </span>
                <div
                  class="bp3-popover-wrapper typeSelectorWrapper"
                >
                  <div
                    class="bp3-popover-target typeSelector"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="bp3-icon StyledProps--main icon fixed"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="listFieldsWrapper"
              >
                <div
                  aria-describedby="rbd-hidden-text-1-hidden-text-3"
                  class="Layout--horizontal StyledProps--main draggable StyledProps--flex StyledProps--flex-distribution-space-between StyledProps--flex-alignItems-center StyledProps--margin-top-small StyledProps--margin-bottom-medium"
                  data-rbd-drag-handle-context-id="1"
                  data-rbd-drag-handle-draggable-id="0"
                  data-rbd-draggable-context-id="1"
                  data-rbd-draggable-id="0"
                  data-testid="spec.script.store.spec.files[0]"
                  draggable="false"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--margin-bottom-medium"
                  >
                    <div
                      class="multiSelectField"
                    >
                      <div
                        class="group"
                      >
                        <div
                          class="bp3-form-group"
                          style="flex-grow: 1; margin-bottom: 0px; margin-top: 0px;"
                        >
                          <label
                            class="bp3-label"
                          >
                            <div
                              class="StyledProps--font StyledProps--main StyledProps--flex"
                            >
                              <span
                                class="Tooltip--acenter"
                                data-tooltip-id="TanzuCommandStep_spec.script.store.spec.files[0]"
                              >
                                
                              </span>
                            </div>
                             
                            <span
                              class="bp3-text-muted"
                            />
                          </label>
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="StyledProps--font StyledProps--main selectFieldContainer StyledProps--flex"
                            >
                              <div
                                class="fieldWrapper"
                              >
                                <div
                                  class="bp3-form-group bp3-intent-danger"
                                  style="width: 100%;"
                                >
                                  <div
                                    class="bp3-form-content"
                                  >
                                    <div
                                      class="Layout--vertical StyledProps--main"
                                      data-testid="file-store-select"
                                    >
                                      <div
                                        class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                                        data-testid="container-fs"
                                      >
                                        <p
                                          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-left-xsmall"
                                        >
                                          - 
                                          select
                                           -
                                        </p>
                                        <div
                                          class="StyledProps--font StyledProps--main StyledProps--padding-right-medium"
                                        >
                                          <span
                                            class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--color StyledProps--color-grey300 StyledProps--margin-left-small"
                                            icon="chevron-down"
                                          >
                                            <svg
                                              data-icon="chevron-down"
                                              height="15"
                                              viewBox="0 0 16 16"
                                              width="15"
                                            >
                                              <desc>
                                                chevron-down
                                              </desc>
                                              <path
                                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                                fill-rule="evenodd"
                                              />
                                            </svg>
                                          </span>
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      class="bp3-form-helper-text"
                                    >
                                      <div
                                        class="FormError--errorDiv"
                                        data-name="spec.script.store.spec.files[0]"
                                      >
                                        <span
                                          class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                                          data-icon="circle-cross"
                                        >
                                          <svg
                                            height="12"
                                            viewBox="0 0 13 13"
                                            width="12"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              clip-rule="evenodd"
                                              d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                                              fill-rule="evenodd"
                                            />
                                          </svg>
                                        </span>
                                        <span
                                          class="FormError--error"
                                        >
                                          common.validation.fieldIsRequired
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="StyledProps--font StyledProps--main multiSelectContainerWrapper StyledProps--flex"
                              >
                                <div
                                  class="bp3-popover-wrapper typeSelectorWrapper"
                                >
                                  <div
                                    class="bp3-popover-target typeSelector"
                                  >
                                    <button
                                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                                      type="button"
                                    >
                                      <span
                                        class="bp3-button-text"
                                      >
                                        <span
                                          class="bp3-icon StyledProps--main icon fixed"
                                          data-icon="fixed-input"
                                        >
                                          <svg
                                            height="12"
                                            viewBox="0 0 9 9"
                                            width="12"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                              fill="currentColor"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Accordion--accordion accordion"
      >
        <div
          class="Accordion--panel"
          data-open="false"
          data-testid="optional-config-panel"
        >
          <div
            class="Accordion--summary"
            data-testid="optional-config-summary"
          >
            <div
              class="Accordion--label"
            >
              common.optionalConfig
            </div>
            <div
              class="Accordion--chevron"
            />
          </div>
          <div
            class="bp3-collapse Accordion--collapse"
          >
            <div
              aria-hidden="false"
              class="bp3-collapse-body"
              style="transform: translateY(-undefinedpx);"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TanzuCommandStep tests should show error on submit with invalid data with inline script 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
    >
      <div
        class="formGroup lg"
      >
        <div
          class="InputWithIdentifier--txtNameContainer TextInput--main"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <div
              class="Text--withDocsTooltip"
              data-tooltip-id="universalInputNameWithId"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                Id
              </p>
            </div>
            <p
              class="StyledProps--font StyledProps--main"
            >
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                  tabindex="0"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  />
                </div>
              </span>
            </span>
            <span
              class="bp3-icon StyledProps--main"
              data-icon="Edit"
              style="vertical-align: middle; cursor: pointer;"
            >
              <svg
                height="12"
                viewBox="0 0 16 16"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                  fill="currentColor"
                  fill-rule="evenodd"
                  opacity="0.3"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group bp3-intent-danger"
          >
            <label
              class="bp3-label"
              for="name"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="TanzuCommandStep_name"
              >
                name
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group bp3-intent-danger"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  placeholder="pipeline.stepNamePlaceholder"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="bp3-form-helper-text"
              >
                <div
                  class="FormError--errorDiv"
                  data-name="name"
                >
                  <span
                    class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                    data-icon="circle-cross"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 13 13"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="FormError--error"
                  >
                    pipelineSteps.stepNameRequired
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup sm"
      >
        <div
          class="bp3-form-group bp3-intent-danger"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="TanzuCommandStep_timeout"
            >
              pipelineSteps.timeoutLabel
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="container"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                style="flex-grow: 1;"
              >
                <div
                  class="bp3-input-group bp3-fill"
                >
                  <input
                    class="bp3-input"
                    name="timeout"
                    placeholder="Enter w/d/h/m/s/ms"
                    type="text"
                    value=""
                  />
                </div>
                <span
                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="MultiTypeInput--btn MultiTypeInput--FIXED"
                      data-testid="multi-type-button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="fixed-input"
                      >
                        <svg
                          height="12"
                          viewBox="0 0 9 9"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
            <div
              class="bp3-form-helper-text"
            >
              <div
                class="FormError--errorDiv"
                data-name="timeout"
              >
                <span
                  class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                  data-icon="circle-cross"
                >
                  <svg
                    height="12"
                    viewBox="0 0 13 13"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="FormError--error"
                >
                  validation.timeout10SecMinimum
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
      >
        <div
          class="StyledProps--font StyledProps--main typeSelect"
        >
          <select
            class="selectDropdown"
            data-testid="templateOptions"
            name="spec.script.store.type"
          >
            <option
              value="Harness"
            >
              resourcePage.fileStore
            </option>
            <option
              value="Inline"
            >
              inline
            </option>
          </select>
        </div>
      </div>
      <div
        class="formGroup md bottomWidth"
      >
        <div
          class="group"
          data-rbd-droppable-context-id="2"
          data-rbd-droppable-id="droppableSelect"
        >
          <div
            class="bp3-form-group"
            style="flex-grow: 1; margin-bottom: 0px;"
          >
            <label
              class="bp3-label"
              for="spec.script.store.spec.files"
            >
              <div
                class="formLabel"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="TanzuCommandStep_spec.script.store.spec.files"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <label
                      class="Label--main"
                    >
                      common.script
                    </label>
                  </div>
                </span>
                <div
                  class="bp3-popover-wrapper typeSelectorWrapper"
                >
                  <div
                    class="bp3-popover-target typeSelector"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="bp3-icon StyledProps--main icon fixed"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="listFieldsWrapper"
              >
                <div
                  aria-describedby="rbd-hidden-text-2-hidden-text-6"
                  class="Layout--horizontal StyledProps--main draggable StyledProps--flex StyledProps--flex-distribution-space-between StyledProps--flex-alignItems-center StyledProps--margin-top-small StyledProps--margin-bottom-medium"
                  data-rbd-drag-handle-context-id="2"
                  data-rbd-drag-handle-draggable-id="0"
                  data-rbd-draggable-context-id="2"
                  data-rbd-draggable-id="0"
                  data-testid="spec.script.store.spec.files[0]"
                  draggable="false"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--margin-bottom-medium"
                  >
                    <div
                      class="multiSelectField"
                    >
                      <div
                        class="group"
                      >
                        <div
                          class="bp3-form-group"
                          style="flex-grow: 1; margin-bottom: 0px; margin-top: 0px;"
                        >
                          <label
                            class="bp3-label"
                          >
                            <div
                              class="StyledProps--font StyledProps--main StyledProps--flex"
                            >
                              <span
                                class="Tooltip--acenter"
                                data-tooltip-id="TanzuCommandStep_spec.script.store.spec.files[0]"
                              >
                                
                              </span>
                            </div>
                             
                            <span
                              class="bp3-text-muted"
                            />
                          </label>
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="StyledProps--font StyledProps--main selectFieldContainer StyledProps--flex"
                            >
                              <div
                                class="fieldWrapper"
                              >
                                <div
                                  class="bp3-form-group bp3-intent-danger"
                                  style="width: 100%;"
                                >
                                  <div
                                    class="bp3-form-content"
                                  >
                                    <div
                                      class="Layout--vertical StyledProps--main"
                                      data-testid="file-store-select"
                                    >
                                      <div
                                        class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                                        data-testid="container-fs"
                                      >
                                        <p
                                          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-left-xsmall"
                                        >
                                          - 
                                          select
                                           -
                                        </p>
                                        <div
                                          class="StyledProps--font StyledProps--main StyledProps--padding-right-medium"
                                        >
                                          <span
                                            class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--color StyledProps--color-grey300 StyledProps--margin-left-small"
                                            icon="chevron-down"
                                          >
                                            <svg
                                              data-icon="chevron-down"
                                              height="15"
                                              viewBox="0 0 16 16"
                                              width="15"
                                            >
                                              <desc>
                                                chevron-down
                                              </desc>
                                              <path
                                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                                fill-rule="evenodd"
                                              />
                                            </svg>
                                          </span>
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      class="bp3-form-helper-text"
                                    >
                                      <div
                                        class="FormError--errorDiv"
                                        data-name="spec.script.store.spec.files[0]"
                                      >
                                        <span
                                          class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                                          data-icon="circle-cross"
                                        >
                                          <svg
                                            height="12"
                                            viewBox="0 0 13 13"
                                            width="12"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              clip-rule="evenodd"
                                              d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                                              fill-rule="evenodd"
                                            />
                                          </svg>
                                        </span>
                                        <span
                                          class="FormError--error"
                                        >
                                          common.validation.fieldIsRequired
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="StyledProps--font StyledProps--main multiSelectContainerWrapper StyledProps--flex"
                              >
                                <div
                                  class="bp3-popover-wrapper typeSelectorWrapper"
                                >
                                  <div
                                    class="bp3-popover-target typeSelector"
                                  >
                                    <button
                                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                                      type="button"
                                    >
                                      <span
                                        class="bp3-button-text"
                                      >
                                        <span
                                          class="bp3-icon StyledProps--main icon fixed"
                                          data-icon="fixed-input"
                                        >
                                          <svg
                                            height="12"
                                            viewBox="0 0 9 9"
                                            width="12"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                              fill="currentColor"
                                            />
                                          </svg>
                                        </span>
                                      </span>
                                    </button>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Accordion--accordion accordion"
      >
        <div
          class="Accordion--panel"
          data-open="false"
          data-testid="optional-config-panel"
        >
          <div
            class="Accordion--summary"
            data-testid="optional-config-summary"
          >
            <div
              class="Accordion--label"
            >
              common.optionalConfig
            </div>
            <div
              class="Accordion--chevron"
            />
          </div>
          <div
            class="bp3-collapse Accordion--collapse"
          >
            <div
              aria-hidden="false"
              class="bp3-collapse-body"
              style="transform: translateY(-undefinedpx);"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
